Update SPEC.md, Makefile, and README.md to include `find_b_accesses` tool
- Revised SPEC.md to focus on C as the main target language and updated tool references.
- Modified Makefile to include the build process for the new `find_b_accesses` tool.
- Expanded README.md with usage instructions and options for the `find_b_accesses` tool, detailing its functionality for scanning memory accesses to array B.

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -3,13 +3,16 @@
 CC ?= gcc
 CFLAGS = -O2 -Wall -Wextra -std=c99
 
-TOOLS = trace_inspect
+TOOLS = trace_inspect find_b_accesses
 
 .PHONY: all clean
 
 all: $(TOOLS)
 
 trace_inspect: trace_inspect.c
+	$(CC) $(CFLAGS) -o $@ $<
+
+find_b_accesses: find_b_accesses.c
 	$(CC) $(CFLAGS) -o $@ $<
 
 clean:
