Add Phase 3 implementation of trace surgery tools
- Introduced `trace_overwrite_range.c` for overwriting trace records within specified ranges, maintaining total trace length.
- Updated `trace_inspect.c` to include a new `--start IDX` option for enhanced trace analysis.
- Modified `Makefile` to include build targets for the new tools.
- Expanded documentation in `README.md` and added `SESSION_LOG_PHASE3.md` detailing Phase 3 tasks and specifications.

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -3,7 +3,7 @@
 CC ?= gcc
 CFLAGS = -O2 -Wall -Wextra -std=c99
 
-TOOLS = trace_inspect find_b_accesses
+TOOLS = trace_inspect find_b_accesses trace_overwrite_range
 
 .PHONY: all clean
 
@@ -13,6 +13,9 @@ trace_inspect: trace_inspect.c
 	$(CC) $(CFLAGS) -o $@ $<
 
 find_b_accesses: find_b_accesses.c
+	$(CC) $(CFLAGS) -o $@ $<
+
+trace_overwrite_range: trace_overwrite_range.c
 	$(CC) $(CFLAGS) -o $@ $<
 
 clean:
